# crimson-forge

./: .gitignore  Containerfile  INSTALL.md  Pipfile  README.rst  crimson-forge  crimson-forge-wizard  pyproject.toml  shuffler.py
crimson_forge/: __init__.py  __main__.py  analysis.py  assembler.py  base.py  binary.py  binfile.py  block.py  catalog.py  cli.py  errors.py  graphml.py  instruction.py  ir.py  metasploit.py  segment.py  servicizer.py  source.py  ssa.py  tailor.py  utilities.py  wizard.py
data/: catalog.json  common-arguments.txt
data/asm/: block_api.asm.jnj
data/stubs/: macros.asm
data/stubs/amd64/: block_api.asm  service_wrapper.asm  service_wrapper.asm.jnj  service_wrapper.jnj.asm
data/stubs/x86/: block_api.asm  block_api.asm.jnj  service_wrapper.asm  service_wrapper.asm.jnj  service_wrapper.jnj.asm
data/templates/template-service/: main.c  template-service.sln  template-service.vcxproj
docker/: Dockerfile  README.rst
docs/source/: conf.py  index.rst
docs/source/crimson_forge/: index.rst  ir.rst  source.rst  ssa.rst  utilities.rst
metasploit/: README.md  crimson_forge.py
tasks/: __init__.py  container.py
tools/: assembler.py  servicizer.py
tools/analysis/: console.py  graph.py
