[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crimson-forge"
version = "0.4.0"
requires-python = ">=3.12"
dependencies = [
    "angr==9.2.130",
    "archinfo==9.2.130",
    "boltons==24.1.0",
    "bullet==2.2.0",
    "capstone==5.0.3",
    "graphviz==0.20.3",
    "jinja-vanish==0.1",
    "jinja2==3.1.4",
    "keystone-engine==0.9.2",
    "lief==0.16.0",
    "markupsafe==3.0.2",
    "networkx==2.8.8",
    "pyvex==9.2.130",
    "smoke-zephyr==2.0.1",
    "tabulate==0.9.0",
    "termcolor==2.5.0",
    "pycparser==2.21",
    "setuptools<75",
]

[project.scripts]
crimson-forge = "crimson_forge.cli:main"
crimson-forge-wizard = "crimson_forge.wizard:main"

[dependency-groups]
dev = [
    "ipython",
    "ipdb",
    "jupyter",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
]
